# tab-hero

./: .gitignore  README.md  conda.yaml  pyproject.toml  requirements.txt  sample_features.csv
configs/: default.yaml
configs/model/: base.yaml  large.yaml  small.yaml
data/sample/processed/: .progress_manifest.json  01a4628cda58ff24.tab  0d2e60ceaecb904d.tab  0e2aa6933de60032.tab  0f3308b86f090edd.tab  12913c7af38b6cb0.tab  13aee1a16bb0abd3.tab  21547810b567cabd.tab  2302a9fa5e159fcf.tab  251fe23333474fe7.tab  28fed77850dfb7dd.tab  2eb72f23db089af9.tab  31fec43ef7516929.tab  3cec15481bd8ff97.tab  3f68218e7d927e9f.tab  424d94192baa0ec4.tab  462463a744a184b3.tab  48a354079550c9b5.tab  4aafc6625847e33a.tab  4e6ee2af63040ba5.tab  5e07e71e90a18e68.tab  5fd2b0986975efed.tab  6323ec7c33359842.tab  72a4dcb07cdb5c3b.tab  736ae11278c29df7.tab  75ac6c4cbb0d7431.tab  75dfce5d6772e801.tab  7b2c34aa8b7d8fb2.tab  8535afa08560ab4b.tab  8dfe1f6620965478.tab  915145ac525360e4.tab  9ebef0a3b79ede84.tab  a0e36ec7fc8b4504.tab  a6e546420716358a.tab  b191ad19b09a1bad.tab  b1c898fc22d65a2b.tab  b376e40aee8f0925.tab  b6a2add002c686b3.tab  ba715bd11cf3a75d.tab  c1bef9fea0e9995e.tab  (+10 more)
data/sample/raw/ascending_scale/: notes.chart  (+1 more)
docs/: architecture.md  data_format.md  feature_extraction.md  research_notes.md
notebooks/: cleaned_rows_feature_exploration.ipynb  data_deepdive.ipynb  data_deepdive_refactored.ipynb  data_deepdive_updated_cleanup.ipynb  feature_exploration.ipynb  feature_exploration_cleaned.ipynb  feature_visualization.ipynb  inference_demo.ipynb  supervised_training_walkthrough.ipynb  tab_data_exploration.ipynb  unsupervised_pipeline_investigation.ipynb
scripts/: __init__.py  data_prep.py  extract_features.py  generate.py  preprocess.py  run_demo.py  train.py
scripts/unsupersived_pipeline/: file_inspection.ipynb  unsupervised_pipeline_investigation.ipynb
src/tab_hero/: __init__.py
src/tab_hero/dataio/: __init__.py  audio_processor.py  chart_parser.py  chunked_dataset.py  dataset.py  feature_extractor.py  preprocessing.py  samplers.py  source_separation.py  tab_dataset.py  tab_format.py  tokenizer.py
src/tab_hero/inference/: __init__.py  exporter.py  generator.py  pipeline.py
src/tab_hero/model/: __init__.py  chart_transformer.py  decoder.py  encoder.py
src/tab_hero/training/: __init__.py  losses.py  trainer.py
(+4 files in other folders)
